[project]
name = "festo-pgva"
description = "Library to control Festo Lifetech PGVA-1 Pressure and Vacuum Generator Device"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Joshua Dang", email = "joshua.dang@festo.com"},
    {name = "Kyle Wardlow", email = "kyle.wardlow@festo.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Festo", "Pressure", "Vacuum", "Generator"]
# dynamic = ["version"]
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pymodbus<=3.11.4",
    "rich>=14.0.0",
]


[project.optional-dependencies]
serial = [
    "pymodbus[serial]<=3.11.4",
]

[project.urls]
Homepage = "https://github.com/Festo-se/festo-pgva/"

Repository = "https://github.com/Festo-se/festo-pgva.git"
Issues = "https://github.com/Festo-se/festo-pgva/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-codeinclude-plugin>=0.2.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[tool.uv.build-backend]
module-name = "pgva"

[tool.ruff]
line-length = 150
indent-width = 4
target-version = "py311"
src = ["src", "examples"]
exclude = [
    ".git",
    "__pycache__",
    ".vscode",
    ".venv",
    ".pytest_cache",
    "tests",
]
fix = true
show-fixes = true


[tool.ruff.lint]
select = ["PL"]
extend-select = [
    "E",
    "W",
    "F",
    "C90",
    "B9",
    "S",
    "I",
    "C",
    "R",
    "B",
    "Q",
    "PLC",
    "PLE",
    "PLW",
    "PLR",
]
ignore = [
    "PLR2004", # Ignore Magic value found
    "PLR0915", # Ignore too many statements
    "C901",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
exclude = [
    ".git",
    "__pycache__",
    ".vscode",
    ".venv",
    ".pytest_cache",
    "tests",

]
