[project]
name = "festo-pgva"
description = "Library to control Festo Lifetech PGVA-1 Pressure and Vacuum Generator Device"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Joshua Dang", email = "joshua.dang@festo.com"},
    {name = "Kyle Wardlow", email = "kyle.wardlow@festo.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Festo", "Pressure", "Vacuum", "Generator"]
# dynamic = ["version"]
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
    "pymodbus<=3.11.4",
]

[project.optional-dependencies]
serial = [
    "pymodbus[serial]<=3.11.4",
]

[project.urls]
Homepage = "https://github.com/Festo-se/festo-pgva/"

Repository = "https://github.com/Festo-se/festo-pgva.git"
Issues = "https://github.com/Festo-se/festo-pgva/issues"

[build-system]
requires = ["uv_build>=0.9.17,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "festo-python-logging>=0.0.10",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "ty>=0.0.19",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-codeinclude-plugin>=0.2.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[tool.uv.build-backend]
module-name = "pgva"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: marks tests that require a live PGVA-1 device (deselect with -m 'not hardware')",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
src = ["src", "examples"]
exclude = [
    ".git",
    "__pycache__",
    ".vscode",
    ".venv",
    ".pytest_cache",
]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F", "C901", "B", "S"]
ignore = ["D203", "D212"]
exclude = ["tests/*",]

[tool.ruff.lint.per-file-ignores]
# Ignore D100 and D104 in all __init__.py files
"__init__.py" = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"


[tool.coverage.run]
source = ["pgva"]
branch = true                
omit = [
    "src/pgva/pgva_interface.py",   
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",    
    "if __name__ == .__main__.:",
]